src/test/deca/syntax/invalid/created/syntax/include_itself.des
Circular include for file include_itself.deca